Table,link,list,attribute

--- a/index.html
+++ b/index.html
@@ -45,5 +45,41 @@
       <dt>orange</dt>
       <dd>It is orange in color and so tasty</dd>
     </dl>
+
+    <img src="https://i.pinimg.com/originals/4b/5f/d3/4b5fd341ed56b734a5de24945fcd1c36.jpg" height="200px" />
+
+    <a href="https://www.flipkart.com/">flipkart</a>
+    
+    <a href="https://www.amazon.in/">amazon</a>
+
+    <table border="5">
+      <tr>
+        <th>Student id</th>
+        <th> Student name</th>
+        <th>student class</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Akhil</td>
+        <td>9</td>
+      </tr>
+    </table>
+
+    <ul>
+      <li>apple</li>
+      <li>guava</li>
+      <li>watermelon</li>
+    </ul>
+    <ol>
+      <li>green matar</li>
+      <li>paneer</li>
+      <li>oil</li>
+    </ol>
+    <dl>
+    <dt>coffee</dt>
+    <dd><b>cold coffee</b></dd>
+    <dt>tea</dt>
+    <dd>red tea</dd>
+    </dl>
   </body>
 </html>
